# Quantitative-Trading-Platform

./: .env.example  .gitignore  CHANGELOG.md  DEVPLAN_V2.md  HANDOFF.md  Makefile  README.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: audit.py  config.py  database.py  logging.py  rbac.py  redis.py
backend/app/data/: pairlist.py  screener.py  screener_meta.py  service.py  source_registry.py  symbol_dict.py
backend/app/gateway/: __init__.py  alpaca_gateway.py  base.py  futu_gateway.py  futures_base.py  ib_gateway.py  paper_gateway.py  xtp_gateway.py
backend/app/notify/: __init__.py  config.py  dispatcher.py  events.py  store.py
backend/app/oms/: __init__.py  futu_wiring.py  manager.py  order.py
backend/app/oms/algos/: base.py  (+5 more)
backend/app/quant/: __init__.py  bsm.py  cointegration.py  copula.py  double_ensemble.py  factor_analysis.py  factor_fitness.py  formula_factor.py  garch.py  gbm.py  hmm_regime.py  indicators.py  kelly.py  ml_strategy.py  panel.py  pca_factor.py  processing_pipeline.py  processors.py
backend/app/risk/: __init__.py  engine.py  models.py  portfolio.py  var_engine.py
backend/app/strategy/: __init__.py  base.py  context.py  engine.py  indicators.py
backend/app/tasks/: __init__.py  celery_app.py  data.py  notify.py
backend/tests/: test_api_bars.py  test_api_orders.py  test_api_risk.py  test_backtest_broker.py  test_backtest_engine.py  test_bias_detection.py  test_black_litterman.py  test_cvar_opt.py  test_data_feeds.py  test_data_models.py  test_data_service.py  test_discrete_allocation.py  test_double_ensemble.py  test_expected_returns.py  test_factor_fitness.py  test_factor_lib_loader.py  test_factor_lib_operators.py  test_factor_processors.py  test_formula_operators_windowed.py  test_gateway_alpaca.py  test_genetic_mining.py  test_health.py  test_hrp.py  test_hyperopt.py  test_mc_robustness.py  test_oms_manager.py  test_order_algos.py  test_pairlist.py  test_protections.py  test_quant_algorithms.py  test_risk_engine.py  test_risk_models.py  test_risk_portfolio.py  test_strategy_indicators.py  test_topk_dropout.py  test_walkforward.py
(+266 files in other folders)
